--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -46,6 +47,7 @@ def gson_version = '2.8.6'
 def glide_version = '4.11.0'
 def mp_chart_version = 'v3.1.0'
 def circle_img_version = '3.1.0'
+def preferences_version = '1.1.1'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -89,6 +91,9 @@ dependencies {
 
     // MP Android Chart
     implementation "com.github.PhilJay:MPAndroidChart:$mp_chart_version"
+
+    // Preferences
+    implementation "androidx.preference:preference:$preferences_version"
 
     // Multidex
     implementation "com.android.support:multidex:1.0.3"
